# packed_struct_128

packed_struct/: Cargo.toml  build.rs
packed_struct/src/: lib.rs  types_array.rs  types_generic.rs  types_num.rs
packed_struct_codegen/: Cargo.toml
packed_struct_codegen/src/: lib.rs  pack.rs  pack_codegen.rs  pack_parse.rs  primitive_enum.rs  utils.rs
packed_struct_examples/: Cargo.toml
packed_struct_examples/src/: lib.rs  test.rs
packed_struct_tests/: Cargo.toml
packed_struct_tests/tests/: common.rs  complex.rs  packing_codegen_1.rs  primitive_enum_types.rs  primitive_enum_values.rs
